# project-installer

./: .gitignore  LICENSE  app.py  pyproject.toml  readme.MD
laravel_installer/: config.py  constants.py  installer.py  main.py  models.py  privileged_helper.py  system.py  ui.py  utils.py
laravel_installer/assets/: laravel-installer.desktop
laravel_installer/polkit/: com.emre.laravel-installer.policy
laravel_installer/templates/: apache_vhost.conf
scripts/: build_deb.sh
tests/: test_config.py  test_helper.py  test_installer.py
