[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laravel-installer"
version = "1.0.2"
description = "Ubuntu desktop tool for installing Laravel projects locally."
readme = "readme.MD"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Emre" }
]
dependencies = [
  "customtkinter>=5.2.0",
  "packaging>=24.0"
]

[project.scripts]
laravel-installer = "laravel_installer.main:main"
laravel-installer-helper = "laravel_installer.privileged_helper:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
laravel_installer = ["templates/*.conf", "assets/*", "polkit/*"]
